run.sh: Add profile and GC options for JVM